--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rusqlite = "0.32.1"
+bincode = "1.3.3"
+serde = "1.0.130"
+serde_derive = "1.0.130"
+sled = "0.34.7"
+
+
+[dev-dependencies]
+lazy_static = "1.4.0"
