--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustpm_orm"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 
 [dependencies]
@@ -8,7 +8,7 @@ bincode = "1.3.3"
 serde = "1.0.130"
 serde_derive = "1.0.130"
 sled = "0.34.7"
-
+uuid = { version = "1.7.0", features = ["v4"] }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
